body overflow fixed

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,17 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&family=Roboto:wght@300;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&family=JetBrains+Mono:wght@300&family=Roboto+Mono:wght@300&family=Source+Code+Pro:wght@300;400&display=swap');
 
 body, html, #app, .pseudobody {
   width: 100%;
   height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
-  /* overflow: hidden; */
-  background-color: var(--main-color);
+}
+
+body {
+  overflow-y: hidden;
 }
 
 .pseudobody {
@@ -15,14 +19,11 @@ body, html, #app, .pseudobody {
   font-weight: 300;
   color: var(--font-color);
   background-color: var(--main-color);
+  overflow: auto;
 }
 
 .g-text-button {
   text-decoration: none;
   cursor: pointer;
   color: var(--font-color);
-}
-
-.container {
-  margin-top: 10px;
 }
